Add VM options to build.sbt