@@ -12,5 +12,12 @@ lazy val root = (project in file("."))
     libraryDependencies ++= Seq(
       "au.csiro.pathling" % "library-runtime" % "8.0.0-SNAPSHOT",
       "org.apache.spark" %% "spark-sql" % "3.5.6"
+    ),
+    run / fork := true,
+    run / javaOptions ++= Seq(
+      "-ea",
+      "-Duser.timezone=UTC",
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.net=ALL-UNNAMED"
     )
   )
